--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
 					</a>
 				</li>
 				
-			</ul>
+			</ul><!-- ./footer__list -->
 			
 			<p class="footer__text">&#169;2015 Axure Themes</p>
 			</div><!-- ./contenet -->
