--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 				<div class="main__header">
 					<h2 class="title__header">Why this is awesome</h2>
 					<hr class="line__header">
-					<p class="text__header">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+					<p class="text__header">Lorem ipsum dolor sit amet, consecrtetur adipiscing elit.</p>
 				</div><!-- ./main__header -->
 
 				<div class="process__card">
